--- a/server/config.yaml
+++ b/server/config.yaml
@@ -89,12 +89,12 @@ jwt:
 local:
   path: uploads/file
 mysql:
-  path: 127.0.0.1
+  path: 172.16.1.10
   port: "3306"
   config: charset=utf8mb4&parseTime=True&loc=Local
   db-name: gva
   username: root
-  password: mysql8
+  password: mysql
   max-idle-conns: 10
   max-open-conns: 100
   log-mode: error
